variadics/tests/compile-fail/var_type_badtype.stderr
error[E0412]: cannot find type `MyIdent` in this scope
 --> tests/compile-fail/var_type_badtype.rs:4:41
  |
4 |     type _List = var_type!(String, u32, MyIdent, bool);
  |                                         ^^^^^^^ not found in this scope
